[package]
name = "pdf-utils-rust"
version = "0.1.4"
edition = "2021"
authors = ["Tongshisan <1195959825@qq.com>"]
description = "PDF and image processing utilities compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# PDF 处理
lopdf = "0.32"

# 图片处理
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

